src/cluster-mgmt/src/cli/apps/kube-webhook/webhook-adjust-resource-template.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kube-webhook-adjust-resource
  namespace: kube-system
  labels:
    app: kube-webhook
webhooks:
  - name: kube-webhook-ceph.kube-system.svc.cluster.local
    clientConfig:
      caBundle: ${TLS_CRT}
      service:
        name: kube-webhook
        namespace: kube-system
        path: "/adjust-resource"
        port: 443
    rules:
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        resources: [ "deployments" ]
        scope: "Namespaced"
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        resources: [ "daemonsets" ]
        scope: "Namespaced"
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        resources: [ "statefulsets" ]
        scope: "Namespaced"
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [ "batch" ]
        apiVersions: [ "v1" ]
        resources: [ "jobs" ]
        scope: "Namespaced"
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Ignore
    admissionReviewVersions: [ "v1" ]
